ExceptionHandler in controller is not used by another controller. Fixes #1909